--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
+    "react-dnd": "^16.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.1",
     "react-scripts": "^5.0.0",
