--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "eslint-plugin-eslint-plugin": "^4.1.0",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-multer": "^1.0.2",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
+    "moment": "^2.29.3",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
