--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dnd": "^16.0.1",
     "react-dom": "^17.0.2",
     "react-drag-listview": "^0.2.1",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^5.3.1",
     "react-scripts": "^5.0.0",
     "request": "^2.88.2",
