--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "antd": "^4.19.5",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "crypto-js": "^4.1.1",
     "eslint-plugin-eslint-plugin": "^4.1.0",
     "fs": "0.0.1-security",
+    "jsencrypt": "^3.2.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
